administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/projectLayerSettings.1.content.0.json
+++ b/app/projectLayerSettings.1.content.0.json
@@ -1,8 +1,8 @@
 {
     "type": "WizardDescriptionField",
     "config": {
-        "label": "Description",
-        "message": "add a description",
+        "label": "Marker Icon",
+        "message": "",
         "lines": 3,
         "mandatory": false,
         "showAudios": true,
