--- a/app/projectLayerSettings.1.content.0.json
+++ b/app/projectLayerSettings.1.content.0.json
@@ -15,6 +15,6 @@
         "toolbarPosition": "bottom",
         "textFormatScript": "",
         "mediaIconTint": "rgb(100, 149, 237)",
-        "onRenderModuleFn": "module.getTextField().getInputElement().setStyle('display','none');"
+        "onRenderModuleFn": "module.runOnceOnLoad(function(){\n    \n    module.getTextField().getInputElement().setStyle('display','none');\n})"
     }
 }
