--- a/app/splitProjectDetail.content.0.json
+++ b/app/splitProjectDetail.content.0.json
@@ -2,6 +2,7 @@
     "type": "UIView",
     "config": {
         "className": "dark-only-shading inset-menu-shading left-panel",
+        "identifier": "",
         "viewType": "view",
         "namedView": "projectsListDetail",
         "shouldRender": true,
@@ -13,7 +14,7 @@
         "deleteItemScript": "",
         "initModuleScript": "",
         "formatModuleScript": "console.log([\"projects menu list\", module, item]);",
-        "resolveItemScript": "\nif(item instanceof ProjectList){\n    return item;\n}\n\nif(item&&item.label){\n    return new ProjectList(item);\n}\n\n\nreturn new ProjectList({\n    label:\"Projects\",\n    showCreateBtn:true,\n    filter:null,\n    invertfilter:false\n})",
+        "resolveItemScript": "\nreturn ProjectList.ResolveProjectList(item);",
         "filterModulesScript": "return list",
         "itemButtonsScript": "return [];",
         "insertAtTop": false,
