--- a/app/defaultTasksForm.1.content.0.json
+++ b/app/defaultTasksForm.1.content.0.json
@@ -1,4 +1,8 @@
 {
-    "type": "FormTextField",
-    "config": {}
+    "type": "WizardScriptElement",
+    "config": {
+        "name": "My Custom Script",
+        "script": "return item.getTitle();",
+        "description": "Info about my custom script"
+    }
 }
