administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/defaultTasksForm.1.content.0.json
+++ b/app/defaultTasksForm.1.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "return item.getTitle();",
+        "script": "return '<h2>'+item.getTitle()+'<\/h2>';",
         "description": "Info about my custom script"
     }
 }
