--- a/app/singleProjectOverviewDetail.content.0.json
+++ b/app/singleProjectOverviewDetail.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "\n\nvar enabled= DashboardConfig.getValue('enableTasks');\n    \n    if(!enabled){\n        return null;\n    }\n\n\nreturn new ModuleArray([\n    new ElementModule(\"label\",{html:\"Tasks completed\"}),\n    new ElementModule(\"div\",{html:item.getPercentComplete()+\"%\", \"class\":\"percent-complete-value\"}),\n    new ProgressBarModule({value:function(){ return item.getPercentComplete(); },\"class\":\"percent-complete\"})\n],{\"class\":\"progress\"});",
+        "script": "\n\nvar enabled= DashboardConfig.getValue('enableTasks');\n    \n    if(!enabled){\n        return null;\n    }\n\n\nreturn new ModuleArray([\n    new ElementModule(\"label\",{html:\"Tasks completed\"}),\n    new ElementModule(\"div\",{html:item.getPercentComplete()+\"%\", \"class\":\"percent-complete-value\"}),\n    new ProgressBarModule({value:function(){ return item.getPercentComplete(); },\"class\":\"percent-complete\"})\n],{\"class\":\"progress\", identifier:\"project-task-progress\"});",
         "description": "Info about my custom script"
     }
 }
