administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectDiscussionDetail.content.0.json
+++ b/app/singleProjectDiscussionDetail.content.0.json
@@ -4,6 +4,7 @@
         "className": "section-title",
         "text": "Discussion",
         "template": "",
-        "templateVariablesScript": ""
+        "templateVariablesScript": "",
+        "formatTextScript": ""
     }
 }
