administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectDiscussionDetail.content.0.json
+++ b/app/singleProjectDiscussionDetail.content.0.json
@@ -1,7 +1,7 @@
 {
     "type": "InlineHtml",
     "config": {
-        "className": "section-title",
+        "className": "section-title discussion-header",
         "text": "Discussion",
         "template": "",
         "templateVariablesScript": "",
