--- a/app/Projects List Detail.content.0.json
+++ b/app/Projects List Detail.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "\n\n\nvar projectsLabel=\"Projects\";\n\n\nif(item instanceof ProjectList){\n    projectsLabel=item.getLabel();\n    \n    console.error(item);\n    \n    var filterTag=item.getCategoryLockFilter();\n    if(tag&&!tag.isRootTag()){\n        var parentTag=tag.getParentTagData();\n        var click=function(){\n            navigateToNamedCategoryType(parentTag.getName());\n        }\n    }\n    \n}\n\nvar icon='';\nif(item.getIcon){\n    icon='<span class=\"section-icon\" style=\"background-image:url('+item.getIcon()+'); ';\n    \n    if(item.getColor){\n        icon+='background-color:'+item.getColor()+'; ';\n    }\n    \n    icon+='\"><\/span>'\n}\n\n\nreturn '<div class=\"section-title section-padding\" data-identifier=\"htmlLabel\">'+icon+'<span>'+projectsLabel+'<\/span><\/div>'",
+        "script": "\n\n\nvar projectsLabel=\"Projects\";\n\n\nif(item instanceof ProjectList){\n    projectsLabel=item.getLabel();\n    \n    console.error(item);\n    \n    var tag=item.getCategoryLockFilter();\n    if(tag&&!tag.isRootTag()){\n        var parentTag=tag.getParentTagData();\n        var click=function(){\n            navigateToNamedCategoryType(parentTag.getName());\n        }\n    }\n    \n}\n\nvar icon='';\nif(item.getIcon){\n    icon='<span class=\"section-icon\" style=\"background-image:url('+item.getIcon()+'); ';\n    \n    if(item.getColor){\n        icon+='background-color:'+item.getColor()+'; ';\n    }\n    \n    icon+='\"><\/span>'\n}\n\n\nreturn '<div class=\"section-title section-padding\" data-identifier=\"htmlLabel\">'+icon+'<span>'+projectsLabel+'<\/span><\/div>'",
         "description": "Info about my custom script"
     }
 }
