administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/configurationArchiveDetail.content.0.json
+++ b/app/configurationArchiveDetail.content.0.json
@@ -2,7 +2,7 @@
     "type": "InlineHtml",
     "config": {
         "className": "",
-        "text": "",
+        "text": "Archive",
         "template": "html.archiveText",
         "templateVariablesScript": "{}",
         "formatTextScript": "",
