--- a/app/configurationArchiveDetail.content.0.json
+++ b/app/configurationArchiveDetail.content.0.json
@@ -5,7 +5,7 @@
         "text": "Archive",
         "template": "html.archiveText",
         "templateVariablesScript": "{}",
-        "formatTextScript": "",
+        "formatTextScript": "var btn=ConfigItem.CreateEditBtn(new ConfigItem({\n    \"editLabel\":\"Edit proponent info\",\n    'widget':options.widget,\n    'form':'textFieldForm',\n    'stepOptions':{\n        width:600\n    }\n}));\n\nif(btn){\n    module.getElement().appendChild(btn);\n}",
         "ajaxRequestTemplate": true
     }
 }
