administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/chooseProjectTypeForm.1.content.0.json
+++ b/app/chooseProjectTypeForm.1.content.0.json
@@ -1,10 +1,9 @@
 {
-    "type": "WizardTitleField",
+    "type": "TagCloud",
     "config": {
-        "label": "Title",
-        "message": "add a title",
-        "className": "",
-        "maxChars": 0,
-        "textFormatScript": ""
+        "tags": "[\n    \"tag one\",\n    \"tag two\"\n]",
+        "getItemTagsScript": "return NamedCategoryList.getProjectTags();",
+        "formatModuleScript": "",
+        "scaleWords": true
     }
 }
