--- a/app/chooseProjectTypeForm.1.content.0.json
+++ b/app/chooseProjectTypeForm.1.content.0.json
@@ -3,7 +3,7 @@
     "config": {
         "tags": "[\n    \"tag one\",\n    \"tag two\"\n]",
         "getItemTagsScript": "return NamedCategoryList.getProjectTags();",
-        "formatModuleScript": "",
+        "formatModuleScript": "ProjectTagList.formatTagCloudModule(module);",
         "scaleWords": true
     }
 }
