administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectHistoryDetail.content.0.json
+++ b/app/singleProjectHistoryDetail.content.0.json
@@ -13,8 +13,9 @@
         "resolveChannelScript": "return defaultChannel;",
         "resolveItemScript": "return item;",
         "initialPostsScript": "return null;",
+        "formatPostScript": "",
         "namedView": "defaultPostDetail",
-        "reverseOrder": false,
+        "reverseOrder": true,
         "className": ""
     }
 }
