administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectHistoryDetail.content.0.json
+++ b/app/singleProjectHistoryDetail.content.0.json
@@ -3,7 +3,7 @@
     "config": {
         "discussionTarget": "",
         "width": 300,
-        "constrainHeight": true,
+        "constrainHeight": false,
         "height": 200,
         "inlineEditing": true,
         "inlineReply": true,
