administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Single Project List Item Detail.content.0.json
+++ b/app/Single Project List Item Detail.content.0.json
@@ -2,6 +2,7 @@
     "type": "FieldValue",
     "config": {
         "loadAsync": false,
+        "identifier": "",
         "fieldLabelScript": "return \"\";",
         "fieldValueScript": "return item.getName();",
         "formatElementScript": "el.addClass('item-title')"
