administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Single Project List Item Detail.content.0.json
+++ b/app/Single Project List Item Detail.content.0.json
@@ -4,7 +4,7 @@
         "loadAsync": false,
         "identifier": "",
         "fieldLabelScript": "return \"\";",
-        "fieldValueScript": "return item.getName();",
+        "fieldValueScript": "var name= item.getName();\n\nif(name=='{pending}'){\n    return 'Validation pending';\n}\n\nreturn name;",
         "formatElementScript": "el.addClass('item-title')"
     }
 }
