administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectDiscussionDetail.content.0.json
+++ b/app/singleProjectDiscussionDetail.content.0.json
@@ -5,6 +5,7 @@
         "text": "Discussion",
         "template": "",
         "templateVariablesScript": "",
-        "formatTextScript": ""
+        "formatTextScript": "",
+        "ajaxRequestTemplate": false
     }
 }
